--- a/Lead_Tracker/LeadTracker.html
+++ b/Lead_Tracker/LeadTracker.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="ChromeEx.css">
+    <title>Lead Tracker</title>
+    <link rel="stylesheet" href="LeadTracker.css">
 </head>
 <body>
    <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
     <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
-    <script src="ChromeEx.js" defer></script>
+    <script src="LeadTracker.js" defer></script>
 </body>
 </html>
