--- a/Note_App/note.html
+++ b/Note_App/note.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <script src="note.js" defer></script>
-    <div class="header">
-        <p id="head">Simple Note App</p>
+    <header>
+        <h1 id="head">Simple Note App</h1>
         <button id="make">Take a note</button>
-    </div>    
-    <textarea placeholder="Start writing..." id="dataEl" type="text"></textarea>
+    </header>    
+    <div class="text">
+        <textarea placeholder="Start writing..." id="dataEl" type="text"></textarea>
+    </div>
     <div id="note"></div>
 </body>
 </html>
