Made layout reposnsive

--- a/Calculator/Calculator.html
+++ b/Calculator/Calculator.html
@@ -31,5 +31,11 @@
             <button class="input-btn" id="btnEqual">=</button>
         </div>
     </div>
+    <p 
+        behavior="slide" 
+        direction="right" 
+        style="color: red;">
+        *This is a browser extension that's why it is not full styled.
+    </p>
 </body>
 </html>
