--- a/Atmos/index.html
+++ b/Atmos/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Atmos</title>
 </head>
 <body>
@@ -12,22 +13,20 @@
     <nav  class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <h1 class="atmos">Atmos</h1>
         <input type="text" id="inp" placeholder="Search for Cities">
-        <button onclick="getData()" class="search">Search</button>
+        <button onclick="getData()" class="search"><i class="bi bi-search"></i></button>
     </nav>
     <h1 id="err" style="color: red !important;"></h1>
     <div id="latestWeather" style="display: none;">
-        <div class="main">
-            <div class="m1">
-                <h1 id="display"></h1><br>
-                <h2 id="tim"></h2>
-                <h2 id="temp"></h2>
-                <h2 id="range-main"></h2>
-            </div>
-            <div class="m2">
-                <img src="" alt="weather icon" id="icon-main">
-                <h2 id="weather"></h2>
-                <h2 id="humidity"></h2><br>
+        <div class="row">
+            <div class="col" style="text-align: left;">
+                <h1 id="display"></h1>
+                <h1 id="tim"></h1>
                 <h2 id="feelslike"></h2>
+            </div>
+            <div class="col">
+                <h2 id="temp" class="inf"></h2>
+                <h2 id="range-main" class="inf"></h2>
+                <h2 id="humidity"></h2>
             </div>
         </div>
     </div>
@@ -35,35 +34,35 @@
     <div id="daily" style="display: none;">
         <div class="row">
             <div class="col">
-                <div class="card" style="padding: 2rem; border: 0; border-right: 1px solid white; border-top: 1px solid var(--backcolor); border-bottom: 1px solid var(--backcolor); ">
+                <div class="card">
                     <img src="" alt="weather icon" id="i1" class="card-img-top" style="height: 100px; width: 100px;">
                     <h2 id="c1" class="card-title"></h1>
                     <p id="t1" class="card-subtitle"></p>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="padding: 2rem; border: 0; border-right: 1px solid white; border-top: 1px solid var(--backcolor); border-bottom: 1px solid var(--backcolor); ">
+                <div class="card">
                     <img src="" alt="weather icon" id="i2" class="card-img-top" style="height: 100px; width: 100px;">
                     <h2 id="c2" class="card-title"></h1>
                     <p id="t2" class="card-subtitle"></p>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="padding: 2rem; border: 0; ">
+                <div class="card">
                     <img src="" alt="weather icon" id="i3" class="card-img-top" style="height: 100px; width: 100px;">
                     <h2 id="c3" class="card-title"></h1>
                     <p id="t3" class="card-subtitle"></p>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="padding: 2rem; border: 0; border-top: 1px solid var(--backcolor); border-bottom: 1px solid var(--backcolor); border-left: 1px solid white; ">
+                <div class="card">
                     <img src="" alt="weather icon" id="i4" class="card-img-top" style="height: 100px; width: 100px;">
                     <h2 id="c4" class="card-title"></h1>
                     <p id="t4" class="card-subtitle"></p>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="padding: 2rem; border: 0; border-top: 1px solid var(--backcolor); border-bottom: 1px solid var(--backcolor); border-left: 1px solid white; ">
+                <div class="card">
                     <img src="" alt="weather icon" id="i5" class="card-img-top" style="height: 100px; width: 100px;">
                     <h2 id="c5" class="card-title"></h1>
                     <p id="t5" class="card-subtitle"></p>
