--- a/Atmos/index.html
+++ b/Atmos/index.html
@@ -3,75 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Atmos</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="index.js" defer></script>
-    <nav  class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-        <h1 class="atmos">Atmos</h1>
-        <input type="text" id="inp" placeholder="Search for Cities">
-        <button onclick="getData()" class="search"><i class="bi bi-search"></i></button>
-    </nav>
-    <h1 id="err" style="color: red !important;"></h1>
-    <div id="latestWeather" style="display: none;">
-        <div class="row">
-            <div class="col" style="text-align: left;">
-                <h1 id="display"></h1>
-                <h1 id="tim"></h1>
-                <h2 id="feelslike"></h2>
-            </div>
-            <div class="col">
-                <h2 id="temp" class="inf"></h2>
-                <h2 id="range-main" class="inf"></h2>
-                <h2 id="humidity"></h2>
+    <script src="./script.js" defer></script>
+    <div class="startup-screen">
+        <img src="./svg/Atmos.svg" alt="atmos logo" class="logo">
+        <div class="startup-bar"></div>
+    </div>
+    <div class="loading-screen">
+        <div class="container0">
+            <div class="loader"></div>
+            <h1>Loading...</h1>
+        </div>
+    </div>
+    <div class="permission">
+        <div class="popup">
+            <h2>See results closer to you?</h2>
+            <p>To get the most out of Atmos, let Atmos use your device's precise location.</p>
+            <div class="btn-box">
+                <button id="pl">
+                    <p>Use precise location</p>
+                </button>
+                <button id="notnow">
+                    Not now
+                </button>
             </div>
         </div>
     </div>
-    <br><br><br><br><br>
-    <div id="daily" style="display: none;">
-        <div class="row">
-            <div class="col">
+    <div class="app">
+        <nav>
+            <img src="./svg/Atmos.svg" alt="atmos logo" class="logo">
+            <div class="form">
+                <input type="text" placeholder="Search for a Place..." id="search">
+                <img src="./svg/search.svg" alt="search" id="searchbtn">
+            </div>
+        </nav>
+        <main>
+            <div class="parent-container">
+                <div class="glass">
+                    <div class="container-1">
+                        <div>
+                            <h1 class="city-name"></h1>
+                            <h2 class="country-name"></h2>
+                        </div>
+                    </div>
+                    <div class="container-2">
+                        <div class="sub-container">
+                            <img src="" alt="weather icon" class="weather-icon">
+                            <h1 class="temp"></h1>  
+                        </div>
+                        <p class="feels-like"></p>
+                    </div>
+                </div>
+            </div> 
+            <div class="container-3">
                 <div class="card">
-                    <img src="" alt="weather icon" id="i1" class="card-img-top" style="height: 100px; width: 100px;">
-                    <h2 id="c1" class="card-title"></h1>
-                    <p id="t1" class="card-subtitle"></p>
+                    <div class="sub-container2">
+                        <h1 class="wind-speed"></h1>
+                        <p>Wind Speed</p>
+                    </div>
+                    <img src="./svg/wind-svgrepo-com.svg" alt="wind icon">
+                </div>
+                <div class="card">
+                    <div class="sub-container2">
+                        <h1 class="humidity"></h1>
+                        <p>Humidity</p>
+                    </div>
+                    <img src="./svg/humidity-svgrepo-com.svg" alt="humidity icon">
+                </div>
+                <div class="card">
+                    <div class="sub-container2">
+                        <h1 class="pressure"></h1>
+                        <p>Pressure</p>
+                    </div>
+                    <img src="./svg/pressure-air-svgrepo-com.svg" alt="pressure icon">
+                </div>
+                <div class="card">
+                    <div class="sub-container2">
+                        <h1 class="rain"></h1>
+                        <p>Rain</p>
+                    </div>
+                    <img src="./svg/rain-svgrepo-com.svg" alt="rain icon">
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
-                    <img src="" alt="weather icon" id="i2" class="card-img-top" style="height: 100px; width: 100px;">
-                    <h2 id="c2" class="card-title"></h1>
-                    <p id="t2" class="card-subtitle"></p>
+            <div class="forecast">
+                <h1>6 Day Forecast:</h1>
+                <div class="sub-container-4">
+                    <div class="forecast-card">
+                        <img src="" alt="weather-icon" id="i1">
+                        <h2 id="t1"></h2>
+                        <p>1</p>
+                    </div>
+                    <div class="forecast-card">
+                        <img src="" alt="weather-icon" id="i2">
+                        <h2 id="t2"></h2>
+                        <p>2</p>
+                    </div>
+                    <div class="forecast-card">
+                        <img src="" alt="weather-icon" id="i3">
+                        <h2 id="t3"></h2>
+                        <p>3</p>
+                    </div>
+                    <div class="forecast-card">
+                        <img src="" alt="weather-icon" id="i4">
+                        <h2 id="t4"></h2>
+                        <p>4</p>
+                    </div>
+                    <div class="forecast-card">
+                        <img src="" alt="weather-icon" id="i5">
+                        <h2 id="t5"></h2>
+                        <p>5</p>
+                    </div>
+                    <div class="forecast-card">
+                        <img src="" alt="weather-icon" id="i6">
+                        <h2 id="t6"></h2>
+                        <p>6</p>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
-                    <img src="" alt="weather icon" id="i3" class="card-img-top" style="height: 100px; width: 100px;">
-                    <h2 id="c3" class="card-title"></h1>
-                    <p id="t3" class="card-subtitle"></p>
-                </div>
+            <div class="credit">
+                <p>Created by Harshit (@Harshit264 on Github)</p>
             </div>
-            <div class="col">
-                <div class="card">
-                    <img src="" alt="weather icon" id="i4" class="card-img-top" style="height: 100px; width: 100px;">
-                    <h2 id="c4" class="card-title"></h1>
-                    <p id="t4" class="card-subtitle"></p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="" alt="weather icon" id="i5" class="card-img-top" style="height: 100px; width: 100px;">
-                    <h2 id="c5" class="card-title"></h1>
-                    <p id="t5" class="card-subtitle"></p>
-                </div>
-            </div>    
-        </div>
-    </div>
-    <div class="credit">
-        <h7>By Harshit (@Harshit264 on Github)</h7>
+        </main>
     </div>
 </body>
 </html>
